Fix panel widget init I broke resolving an unknown index Add entry link overflow wrapping Readd star-rating and hitslink to package for 6.1

--- a/style.css
+++ b/style.css
@@ -520,7 +520,15 @@ h2 a {
 	color: inherit;
 }
 
-
+.entry {
+    -ms-word-break: break-all;
+    word-break: break-all;
+    /* Non standard for webkit */
+    word-break: break-word;
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    hyphens: auto;
+}
 /* Margins and Padding */
 
 .main_widget,
